--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
   </div>
 
   <!-- head menu -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav id="top_navigation" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#about_us">About us</a>
         <a class="nav-item nav-link" href="#what_we_do">Service</a>
-        <a class="nav-item nav-link disabled" href="#contact_us">Contact us</a>
+        <a class="nav-item nav-link" href="#contact_us">Contact us</a>
       </div>
     </div>
   </nav>
@@ -69,129 +69,130 @@
 </div>
 </div>
 </div> -->
-
-<section class="home">
-  <div class="container">
-    <h1 class="text-center">Hello.</h1>
-  </div>
-</section>
-<section id="about_us">
-  <div class="container">
-    <h1>About us</h1>
-    <p class="disctiption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo
-    </p>
-  </div>
-</section>
-
-<section id="what_we_do">
-  <div class="container">
-    <h1>What we do</h1>
-    <div class="row">
-      <div class="col-md-3">
-        <i class="fa-mobile-phone"></i>
-        <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
-      </div>
-      <div class="col-md-3">
-        <i class="fa-mobile-phone"></i>
-        <h3>networking</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
-      </div>
-      <div class="col-md-3">
-        <i class="fa-mobile-phone"></i>
-        <h3>Desktop applicaton</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
-      </div>
-      <div class="col-md-3">
-        <i class="fa-mobile-phone"></i>
-        <h3>mobile application</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
-      </div>
+<div data-spy="scroll" data-target="#top_navigation" data-offset="0">
+  <section class="home">
+    <div class="container">
+      <h1 class="text-center">Hello.</h1>
     </div>
-  </div>
-</section>
+  </section>
+  <section id="about_us">
+    <div class="container">
+      <h1>About us</h1>
+      <p class="disctiption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo
+      </p>
+    </div>
+  </section>
 
-<section id="contact_us">
-  <div class="container">
-    <h1>contact us</h1>
-    <div class="row">
-      <div class="col">
-        <h3>Stay in touch</h3>
-
-        <p>Subscrib for update use the form below</p>
-        <form id="notification_email" novalidate>
-          <div class="form-group">
-            <label for="notify_email">Example label</label>
-            <input type="email" class="form-control" id="notify_email" placeholder="Email address" required>
-            <div class="invalid-feedback">
-              Please provide a valid Email.
-            </div>
-          </div>
-          <input type="submit" class="btn " value="notify me">
-        </form>
-      </div>
-      <div class="col">
-        <!--left side contact form  -->
-        <form id="contact_form" novalidate>
-          <div class="form-group">
-            <lable for="user_name">Name:</label>
-              <input type="text" class="form-control" id="user_name" placeholder="Name" required>
-              <div class="invalid-feedback">
-                Please choose a username.
-              </div>
-            </div>
-            <div class="form-group">
-              <lable for="user_email">Email:</label>
-                <input type="email" class="form-control" id="user_email" placeholder="Email" required>
-                <div class="invalid-feedback">
-                  Please provide a valid Email.
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="user_message">Message:</label>
-                <textarea class="form-control" id="user_message" rows="3" required></textarea>
-                <div class="invalid-feedback">
-                  Please provide a message.
-                </div>
-              </div>
-              <button type="submit" class="btn btn-primary">Send</button>
-            </form>
-            <script>
-            // Example starter JavaScript for disabling form submissions if there are invalid fields
-            (function() {
-              'use strict';
-
-
-              window.addEventListener('load', function() {
-                var contact_form = document.getElementById('contact_form');
-                contact_form.addEventListener('submit', function(event) {
-                  if (contact_form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                  }
-                  contact_form.classList.add('was-validated');
-                }, false);
-              }, false);
-
-              window.addEventListener('load', function() {
-                var notification_email = document.getElementById('notification_email');
-                notification_email.addEventListener('submit', function(event) {
-                  if (notification_email.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                  }
-                  notification_email.classList.add('was-validated');
-                }, false);
-              }, false);
-
-
-            })();
-            </script>
-          </div>
+  <section id="what_we_do">
+    <div class="container">
+      <h1>What we do</h1>
+      <div class="row">
+        <div class="col-md-3">
+          <i class="fa-mobile-phone"></i>
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fa-mobile-phone"></i>
+          <h3>networking</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fa-mobile-phone"></i>
+          <h3>Desktop applicaton</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
+        </div>
+        <div class="col-md-3">
+          <i class="fa-mobile-phone"></i>
+          <h3>mobile application</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo</p>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="contact_us">
+    <div class="container">
+      <h1>contact us</h1>
+      <div class="row">
+        <div class="col">
+          <h3>Stay in touch</h3>
+
+          <p>Subscrib for update use the form below</p>
+          <form id="notification_email" novalidate>
+            <div class="form-group">
+              <label for="notify_email">Example label</label>
+              <input type="email" class="form-control" id="notify_email" placeholder="Email address" required>
+              <div class="invalid-feedback">
+                Please provide a valid Email.
+              </div>
+            </div>
+            <input type="submit" class="btn " value="notify me">
+          </form>
+        </div>
+        <div class="col">
+          <!--left side contact form  -->
+          <form id="contact_form" novalidate>
+            <div class="form-group">
+              <lable for="user_name">Name:</label>
+                <input type="text" class="form-control" id="user_name" placeholder="Name" required>
+                <div class="invalid-feedback">
+                  Please choose a username.
+                </div>
+              </div>
+              <div class="form-group">
+                <lable for="user_email">Email:</label>
+                  <input type="email" class="form-control" id="user_email" placeholder="Email" required>
+                  <div class="invalid-feedback">
+                    Please provide a valid Email.
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="user_message">Message:</label>
+                  <textarea class="form-control" id="user_message" rows="3" required></textarea>
+                  <div class="invalid-feedback">
+                    Please provide a message.
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Send</button>
+              </form>
+              <script>
+              // Example starter JavaScript for disabling form submissions if there are invalid fields
+              (function() {
+                'use strict';
+
+
+                window.addEventListener('load', function() {
+                  var contact_form = document.getElementById('contact_form');
+                  contact_form.addEventListener('submit', function(event) {
+                    if (contact_form.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    contact_form.classList.add('was-validated');
+                  }, false);
+                }, false);
+
+                window.addEventListener('load', function() {
+                  var notification_email = document.getElementById('notification_email');
+                  notification_email.addEventListener('submit', function(event) {
+                    if (notification_email.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    notification_email.classList.add('was-validated');
+                  }, false);
+                }, false);
+
+
+              })();
+              </script>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
   <div class="footer">
     &copy; All right reserved. <a href="pages/termANDpolicy.html">Term and policy</a>
   </div>
